crates/wdk-macros/tests/nightly/trybuild/wdf_driver_create_missing_arg.stderr
error[E0061]: this function takes 6 arguments but 5 arguments were supplied
 --> tests/nightly/trybuild/wdf_driver_create_missing_arg.rs
  |
  | /         wdk_macros::call_unsafe_wdf_function_binding!(
  | |             WdfDriverCreate,
  | |             driver as PDRIVER_OBJECT,
  | |             registry_path,
... |
  | |             &mut driver_config,
  | |             ------------------ an argument of type `*mut _WDF_OBJECT_ATTRIBUTES` is missing
  | |             driver_handle_output,
  | |         )
  | |_________^
  |
  = note: this error originates in the macro `wdk_macros::call_unsafe_wdf_function_binding` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
  |
28 ~         )(wdk_macros::call_unsafe_wdf_function_binding!(
29 +             WdfDriverCreate,
30 +             driver as PDRIVER_OBJECT,
31 +             registry_path,
32 +             // The object attributes are missing from this call!
33 +             // WDF_NO_OBJECT_ATTRIBUTES,
34 +             &mut driver_config,
35 +             driver_handle_output,
36 +         ), driver as PDRIVER_OBJECT, registry_path, /* *mut _WDF_OBJECT_ATTRIBUTES */, &mut driver_config, driver_handle_output)
   |
